# cinnaminger-engine

./: CMakeLists.txt  LICENSE  README.md
assets/config/: config.yaml
src/: CMakeLists.txt  EngineConfig.cpp  EngineConfig.h  Gui.cpp  Gui.h  RenderObject.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Window.cpp  Window.h  main.cpp
